archive/apps/obsidian-sync/app/deployment-obsidian-sync.yaml
---
# base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: couchdb
        image: couchdb:latest
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: data
          mountPath: /opt/couchdb/data
        - name: config
          mountPath: /opt/couchdb/etc/local.ini
          subPath: local.ini
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: couchdb-data
      - name: config
        configMap:
          name: couchdb-config
