archive/apps/obsidian-sync/app/svc-obsidian-sync.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: sync
spec:
  selector: 
    app: couchdb
  ports:
  - port: 5984
    targetPort: 5984
  type: ClusterIP
