archive/apps/obsidian-sync/app/ingress-obsidian-sync.yaml
---
# base/ingress.yaml (Cilium Ingress)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  namespace: sync
  annotations:
    # Specify Cilium as the ingress class
    kubernetes.io/ingress.class: "cilium"
    # CORS headers as annotations
    ingress.cilium.io/response-header-add-Access-Control-Allow-Methods: "GET,PUT,POST,HEAD,DELETE"
    ingress.cilium.io/response-header-add-Access-Control-Allow-Headers: "accept,authorization,content-type,origin,referer"
    ingress.cilium.io/response-header-add-Access-Control-Allow-Origin: "app://obsidian.md,capacitor://localhost,http://localhost"
    ingress.cilium.io/response-header-add-Access-Control-Max-Age: "3600"
    ingress.cilium.io/response-header-add-Vary: "Origin"
    ingress.cilium.io/response-header-add-Access-Control-Allow-Credentials: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: sync.klingel.cloud
  # - host: sync.${SECRET_DOMAIN}
    http:
      paths:
      - path: /sync/
        pathType: Prefix
        backend:
          service:
            name: couchdb
            port:
              number: 5984
  tls:
  - hosts:
    # - sync.${SECRET_DOMAIN}
    # secretName: sync.${SECRET_DOMAIN}-tls
      - sync.klingel.cloud
    secretName: sync.klingel.cloud-tls
